--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ crate-type = ["cdylib"]
 [dependencies]
 wasm-bindgen = "0.2"
 console_error_panic_hook = "0.1"
+syntect = { version = "5.2", default-features = false, features = ["default-fancy"]}
+once_cell = "1.20"
