--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,9 @@ wasm-bindgen = "0.2"
 console_error_panic_hook = "0.1"
 syntect = { version = "5.2", default-features = false, features = ["default-fancy"]}
 once_cell = "1.20"
+wasm-bindgen-futures = "0.4"
+markdown = "1.0.0-alpha.22"
+reqwest = { version = "0.12", features = ["json"] }
+js-sys = "0.3"
+ehttp = "0.5.0"
+web-sys = { version = "0.3", features = ["Window", "Document", "Location", "Element"] }
